spotpython-0.16.11:

- documentation: update documentation of the Kriging class

spotpython-0.16.10:

- documentation: update documentation of the Kriging class

spotpython-0.16.9:

- xai.py: add new function viz_net to visualize the network architecture (linear nets)
- dimensions.py: add new function extract_linear_dims that extracts the input and output dimensions of the Linear layers in a PyTorch model.

spotpython-0.16.8:

- xai.py: automatically handle the orientation of the colorbar in the plot_nn_values_scatter function