@@ -6232,6 +6232,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All assertions passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize logging\n",
+    "import numpy as np\n",
+    "from spotpython.build.kriging import Kriging\n",
+    "import logging\n",
+    "logging.basicConfig(level=logging.DEBUG)\n",
+    "# Define the number of theta and p parameters\n",
+    "num_theta = 2\n",
+    "num_p = 3\n",
+    "# Initialize the Kriging model\n",
+    "kriging_model = Kriging(\n",
+    "    name='kriging',\n",
+    "    seed=124,\n",
+    "    n_theta=num_theta,\n",
+    "    n_p=num_p,\n",
+    "    optim_p=True,\n",
+    "    noise=True\n",
+    ")\n",
+    "# Create bounds array\n",
+    "bounds_array = np.array([1, 2, 3, 4, 5, 6])\n",
+    "# Extract parameters from given bounds\n",
+    "kriging_model.extract_from_bounds(new_theta_p_Lambda=bounds_array)\n",
+    "# Assertions to check if parameters are correctly extracted\n",
+    "assert np.array_equal(kriging_model.theta, [1, 2]), f\"Expected theta to be [1, 2] but got {kriging_model.theta}\"\n",
+    "assert np.array_equal(kriging_model.p, [3, 4, 5]), f\"Expected p to be [3, 4, 5] but got {kriging_model.p}\"\n",
+    "assert kriging_model.Lambda == 6, f\"Expected Lambda to be 6 but got {kriging_model.Lambda}\"\n",
+    "print(\"All assertions passed!\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
