@@ -1,3 +1,7 @@
+spotpython-0.16.12:
+
+- kriging.py: method extract_from_bounds() updated.
+
 spotpython-0.16.11:
 
 - documentation: update documentation of the Kriging class
